[package]
name = "reqwest-chain"
version = "1.0.0"
edition = "2021"

authors = ["Tom Milligan <code@tommilligan.net>"]
description = "Apply custom criteria to any reqwest response, deciding when and how to retry."
repository = "https://github.com/tommilligan/reqwest-chain"

license = "MIT"
keywords = ["reqwest", "middleware", "chain", "retry"]
readme = "README.md"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
http = "1.0.0"
reqwest-middleware = { version = "0.4", default-features = false }

[dev-dependencies]
tokio = { version = "1.23.0", features = ["rt", "macros"] }
wiremock = "0.6"
