[package]
name = "reqwest-chain"
version = "1.0.0"
edition = "2024"

authors = ["Tom Milligan <code@tommilligan.net>"]
description = "Apply custom criteria to any reqwest response, deciding when and how to retry."
repository = "https://github.com/tommilligan/reqwest-chain"

license = "MIT"
keywords = ["reqwest", "middleware", "chain", "retry"]
readme = "README.md"

[dependencies]
# reqwest-middleware is agnostic to error implementation - we use anyhow for simplicity
anyhow = "1.0.100"
# required for implementation of reqwest-middleware traits
async-trait = "0.1.89"
# required for implementation of reqwest-middleware traits
http = "1.4.0"
# NOTE: bumping reqwest-middleware to an incompatible version is a breaking change
# as it is exposed in the reqwest-chain api
reqwest-middleware = { version = "0.5", default-features = false }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros"] }
wiremock = "0.6"
